vm/42sh_tester/public/input_logs/error_logs/42sh_86
42sh:1:27: [1m[91merror[0m: unexpected end of file
  1  |  echo 'a'"b"'"c"'"d'"'"e'"f'
     |                            [1m[91m^[0m
